UI-2652: [PLF-4] Platform-UI Align and fix pointer of Gadget title

--- a/platform-ui-web-eXoResources/src/main/webapp/skin/less/Popup/Style.less
+++ b/platform-ui-web-eXoResources/src/main/webapp/skin/less/Popup/Style.less
@@ -22,7 +22,7 @@
 			line-height:35px;
 			color: #333;
 			display: block;
-			cursor: pointer;
+			cursor: move;
 		}	
 	}
 	
